Fix poor contrast color on website

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -84,8 +84,8 @@ textarea {
 :root {
   --color-gray-500: #212121;
   --color-gray-400: #424242;
-  --color-primary-500: #007180;
-  --color-primary-400: #008fa2;
+  --color-primary-500: #005a66;
+  --color-primary-400: #007e8f;
   --font-size-500: 54px;
   --font-size-400: 32px;
   --font-size-300: 23px;
