Web performance enhancements

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -113,6 +113,7 @@ html {
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -122,6 +123,7 @@ html {
   font-weight: 400;
   font-style: normal;
   font-stretch: normal;
+  font-display: swap;
 }
 
 body {
