Use specific height and width for images

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -184,6 +184,7 @@ h4:first-child {
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 @media only screen and (max-width: 1120px) {
@@ -274,7 +275,6 @@ img {
 }
 
 .header-primary__logo > img {
-  width: 170px;
   height: 32px;
 }
 
@@ -314,7 +314,6 @@ img {
 .footer__logo {
   position: relative;
   height: 32px;
-  width: 131px;
 }
 
 .footer__brand {
@@ -588,8 +587,7 @@ img {
 }
 
 .types__image {
-  width: 383px;
-  height: 260px;
+  content-visibility: auto;
   box-sizing: content-box;
   border-radius: 3px;
 }
@@ -654,8 +652,7 @@ img {
 }
 
 .accessibility__image {
-  width: 513px;
-  height: 429px;
+  content-visibility: auto;
 }
 
 .accessibility__secondary {
