--- a/website/map/css/map.css
+++ b/website/map/css/map.css
@@ -17,7 +17,7 @@ html, body, main {
 .map {
   width: 100%;
   height: 100%;
-  background-color: #424242;
+  background-color: transparent;
 }
 
 .map__controls {
